added links and navbar to Portfolio page

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <div class="container-fluid">
 
             <!--Branding/Name/Logo-->
-          <a class="navbar-brand" href="./index.html">Maria Lara</a>
-
+          <a class="navbar-brand"  href="./index.html">Maria Lara</a>
             <!--Toggler for collapsing into a button for mobile responsiveness-->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,9 +59,8 @@
       <!--Second row with article and image-->
         <article class="row m-1">
           <p> 
-            <img src="#" alt="Maria Lara and her dog, Kaya">
-            Welcome and thank you for visiting my website. 
-            <br>
+            <img src="./assets/mlkaya.png" class="img-thumbnail" alt="Maria Lara and her dog, Kaya">
+            Welcome and thank you for visiting my website.
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             <br><br>
             More text coming soon.
