--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
+
     <!--Bootstrap CSS link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!--Bootstrap JS link-->
@@ -43,8 +44,32 @@
           </div>
         </div>
       </nav>
-</head>
-<body>
+
+    <!--Contact Me section-->
+    <main>
+      <section class="container">
+        <h4>Thank you for visiting my website and stay tuned for more projects and updates!</h4>
+        <p>Please feel free to contact me below.</p>
+        <!--Contact Me form-->
+        <form>
+          <div class="form-group">
+            <label for="Name">Your Name</label>
+            <input type="text" class="form-control" id="Name" placeholder="Name">
+          </div>
+          <div class="form-group">
+            <label for="Email">Email address</label>
+            <input type="email" class="form-control" id="Email" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="Message">Message</label>
+            <textarea class="form-control" id="Message" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+
+      </section>
+
+    </main>
     
 </body>
 </html>
