updated contact us page container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
 
             <!--Branding/Name/Logo-->
-          <a class="navbar-brand"  href="./index.html">Maria Lara</a>
+          <a class="navbar-brand"  href="./index.html"><img src="./assets/mllogo.png" class="img-responsive" alt="ML logo"></a>
             <!--Toggler for collapsing into a button for mobile responsiveness-->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse justify-content-end mx-3" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">About Me</a>
+                <a class="nav-link active" aria-current="page" href="./index.html"><strong>About Me</strong></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="./portfolio.html">Portfolio</a>
@@ -50,10 +50,10 @@
       <!--Page Content-->
 
       <!--First row with header-->
-      <main>
-        <section class="container-xs bg-white">
-          <div class="row m-1">
-            <header>About Me</header>
+    <main>
+      <section class="container-xs bg-white">
+          <div class="row mt-1">
+            <header><h1>About Me</h1></header>
           </div>
 
       <!--Second row with article and image-->
@@ -68,13 +68,18 @@
 
           <p>Keep up with me on social:</p>
           <!--Links to social-->
-          <a href="https://www.linkedin.com/in/maria-lara-sf" target="_blank" class="fa fa-linkedin fa-fw"></a>
-          <a href="https://www.instagram.com/__maria.lara__/" target="_blank" class="fa fa-instagram fa-fw"></a>
-          <a href="https://github.com/maria-lara" target="_blank" class="fa fa-github fa-fw"></a>
-          </article>
+            <a href="https://www.linkedin.com/in/maria-lara-sf" target="_blank" class="fa fa-linkedin fa-fw"></a>
+            <a href="https://www.instagram.com/__maria.lara__/" target="_blank" class="fa fa-instagram fa-fw"></a>
+            <a href="https://github.com/maria-lara" target="_blank" class="fa fa-github fa-fw"></a>
+        </article>
 
-        </section>
-      </main>
+      </section>
+    </main>
+
+    <!--Footer-->
+      <footer>
+        <p>&copy Maria Lara</p>
+      </footer>
       
 
 </body>
