--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,11 @@
 
 <body>
     <!--Navigation bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
 
             <!--Branding/Name/Logo-->
-          <a class="navbar-brand"  href="./index.html">Maria Lara</a>
+            <a class="navbar-brand"  href="./index.html"><img src="./assets/mllogo.png" class="img-responsive" alt="ML logo"></a>
             <!--Toggler for collapsing into a button for mobile responsiveness-->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="./portfolio.html">Portfolio</a>
+                <a class="nav-link active" href="./portfolio.html"><strong>Portfolio</strong></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="./contact.html">Contact</a>
@@ -90,11 +90,10 @@
             </div>
         </section>
     </main>
-
-
-</head>
-
-<body>
-    
 </body>
+
+  <!--Footer-->
+<footer>
+  <p>&copy Maria Lara</p>
+</footer>
 </html>
