--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
 
 <body>
     <!--Navigation bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
 
             <!--Branding/Name/Logo-->
-          <a class="navbar-brand"  href="./index.html">Maria Lara</a>
+            <a class="navbar-brand"  href="./index.html"><img src="./assets/mllogo.png" class="img-responsive" alt="ML logo"></a>
             <!--Toggler for collapsing into a button for mobile responsiveness-->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
                 <a class="nav-link active" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="./contact.html">Contact</a>
+                <a class="nav-link active" href="./contact.html"><strong>Contact</strong></a>
               </li>
             </ul>
           </div>
@@ -47,7 +47,8 @@
 
     <!--Contact Me section-->
     <main>
-      <section class="container">
+      <section class="container-xs bg-white">
+        <div class="row mt-1">
         <h4>Thank you for visiting my website and stay tuned for more projects and updates!</h4>
         <p>Please feel free to contact me below.</p>
         <!--Contact Me form-->
@@ -66,10 +67,14 @@
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-
+      </div>
       </section>
 
     </main>
-    
+
+      <!--Footer-->
+    <footer>
+      <p>&copy Maria Lara</p>
+    </footer>
 </body>
 </html>
