--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
             <!--Article for personal project-->
                 <div class="row mt-5">
                     <div class="col-md-3">
-                     <a href="https://codepen.io/marialara/pen/wvKLvyp" target="_blank"><img src="./assets/firstproject.png" class="project-pic1" alt="Screenshot of first projects"></a>
+                     <a href="https://codepen.io/marialara/pen/wvKLvyp" target="_blank"><img src="./assets/firstproject2.png" class="project-pic1" alt="Screenshot of first projects"></a>
                     </div>
                     <div class="col-md-9">
                         <h2>My First Website</h2>
