--- a/portfolio.html
+++ b/portfolio.html
@@ -51,18 +51,24 @@
     <main>
         <section class="container-xs bg-white">
           <div class="row mt-1">
-            <header>Portfolio</header>
+            <header style="padding-bottom: 5px;">Portfolio</header>
           </div>
 
-        <!--Second row with articles and images-->
-          <div class ="row-mt-1">
+      <!--Second row with description-->    
+          <div class="row">
             <p>You can follow my journey into the development world below by viewing my latest projects below. You can submit comments, ideas, or inquiries to me by visiting the <a href="./contact.html" class="links">Contact</a> page.</p>
+          </div>
 
-            <!--Article for Horiseon Marketing website-->
+      <!--Third row with project features-->
+          <div class ="row-mt-1">
+
+            <!--First row inside project features: Horiseon Marketing-->
                 <div class="row mt-5">
+                  <!--First column in Horiseon Marketing row with image-->
                     <div class="col-md-3">
                      <a href="https://maria-lara.github.io/horiseon-web/" target="_blank"><img src="./assets/mlscreenshot.png" class="project-pic1" alt="Screenshot of first projects"></a>
                     </div>
+                  <!--Second column in Horiseon Marketing row with text-->
                     <div class="col-md-9">
                         <h2>Horiseon Marketing Agency website</h2>
                         <p>My first project in the full-stack web development course included building an webpage as desired for a marketing agency. This project focused on HTML, CSS, and accessibility standards. What I had learned most was how to create a webpage through GitHub, created a detailed README file, adding in comments for future use, and ensuring CSS is used correctly and efficiently.</p>
@@ -73,11 +79,13 @@
                     </div>
                 </div>
         
-            <!--Article for personal project-->
+            <!--Second row inside project features: First Website-->
                 <div class="row mt-5">
+                   <!--First column in Horiseon Marketing row with image-->
                     <div class="col-md-3">
                      <a href="https://codepen.io/marialara/pen/wvKLvyp" target="_blank"><img src="./assets/firstproject2.png" class="project-pic1" alt="Screenshot of first projects"></a>
                     </div>
+                    <!--Second column in Horiseon Marketing row with text-->
                     <div class="col-md-9">
                         <h2>My First Website</h2>
                         <p>This website page was the first project I had ever completed when experimenting with coding. It was a fun first time playing with HTML and CSS, and allowed me to create a not-so pretty, but entertaining webpage. This was done on <a href="https://codepen.io" target="_blank" class ="links">CodePen</a></p>
