adding more text to placeholder content and fixing container margins

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Portfolio</title>
 
     <!--Bootstrap CSS link-->
@@ -63,13 +64,13 @@
           <div class ="row-mt-1">
 
             <!--First row inside project features: Horiseon Marketing-->
-                <div class="row mt-5">
+                <div class="row mx-10">
                   <!--First column in Horiseon Marketing row with image-->
-                    <div class="col-md-3">
-                     <a href="https://maria-lara.github.io/horiseon-web/" target="_blank"><img src="./assets/mlscreenshot.png" class="project-pic1" alt="Screenshot of first projects"></a>
+                    <div class="col">
+                     <a href="https://maria-lara.github.io/horiseon-web/" target="_blank"><img src="./assets/mlscreenshot.png" class="img-thumbnail" a alt="Screenshot of first projects"></a>
                     </div>
                   <!--Second column in Horiseon Marketing row with text-->
-                    <div class="col-md-9">
+                    <div class="col">
                         <h2>Horiseon Marketing Agency website</h2>
                         <p>My first project in the full-stack web development course included building an webpage as desired for a marketing agency. This project focused on HTML, CSS, and accessibility standards. What I had learned most was how to create a webpage through GitHub, created a detailed README file, adding in comments for future use, and ensuring CSS is used correctly and efficiently.</p>
                         <ul>
@@ -80,13 +81,13 @@
                 </div>
         
             <!--Second row inside project features: First Website-->
-                <div class="row mt-5">
-                   <!--First column in Horiseon Marketing row with image-->
-                    <div class="col-md-3">
-                     <a href="https://codepen.io/marialara/pen/wvKLvyp" target="_blank"><img src="./assets/firstproject2.png" class="project-pic1" alt="Screenshot of first projects"></a>
+                <div class="row mx-15">
+                   <!--First column in First Website row with image-->
+                    <div class="col">
+                     <a href="https://codepen.io/marialara/pen/wvKLvyp" target="_blank"><img src="./assets/firstproject2.png" class="img-thumbnail"  alt="Screenshot of first projects"></a>
                     </div>
-                    <!--Second column in Horiseon Marketing row with text-->
-                    <div class="col-md-9">
+                    <!--Second column in First Website row with text-->
+                    <div class="col">
                         <h2>My First Website</h2>
                         <p>This website page was the first project I had ever completed when experimenting with coding. It was a fun first time playing with HTML and CSS, and allowed me to create a not-so pretty, but entertaining webpage. This was done on <a href="https://codepen.io" target="_blank" class ="links">CodePen</a></p>
                         <ul>
