--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maria Lara</title>
 
+    <title>Maria Lara</title>
   
     <!--Bootstrap CSS link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -19,13 +19,14 @@
 </head>
 
 <body>
-    <!--Navigation bar-->
+    <!--Begin Navigation bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
 
-            <!--Branding/Name/Logo-->
+          <!--Branding/Name/Logo-->
           <a class="navbar-brand"  href="./index.html"><img src="./assets/mllogo.png" class="img-responsive" alt="ML logo"></a>
-            <!--Toggler for collapsing into a button for mobile responsiveness-->
+            
+          <!--Toggler for collapsing into a button for responsiveness-->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -46,6 +47,7 @@
           </div>
         </div>
       </nav>
+    <!--End Navigation bar-->
 
       <!--Page Content-->
 
@@ -60,8 +62,13 @@
         <article class="row m-1">
           <p> 
             <img src="./assets/mlkaya.png" class="img-thumbnail" alt="Maria Lara and her dog, Kaya">
-            Welcome and thank you for visiting my website.
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Welcome and thank you for visiting my website! My name is Maria Lara and I am excited to share my journey into the development world with you. This website is my way of showcasing my work, interests, and personality, so I hope you enjoy it. 
+            <br><br>
+             A little bit more about how I got here:
+             Born and raised in the Bay Area, I feel extremely fortunate to be surr
+
+
+            
             <br><br>
             More text coming soon.
           </p>
