added media queries and comments

--- a/index.html
+++ b/index.html
@@ -51,36 +51,43 @@
 
       <!--Page Content-->
 
+    
       <!--First row with header-->
-    <main>
-      <section class="container-xs bg-white">
-          <div class="row mt-1">
-            <header><h1>About Me</h1></header>
-          </div>
-
-      <!--Second row with article and image-->
-        <article class="row m-1">
+      <main>
+        <section class="container-xs bg-white">
+            <div class="row mt-1">
+              <header><h1>About Me</h1></header>
+            </div>
+  
+        <!--Second row with article and image-->
+        <article class="row m-1" style="padding-bottom: 50px;">
           <p> 
             <img src="./assets/mlkaya.png" class="img-thumbnail" alt="Maria Lara and her dog, Kaya">
             Welcome and thank you for visiting my website! My name is Maria Lara and I am excited to share my journey into the development world with you. This website is my way of showcasing my work, interests, and personality, so I hope you enjoy it. 
             <br><br>
-             A little bit more about how I got here:
-             Born and raised in the Bay Area, I feel extremely fortunate to be surr
-
-
-            
-            <br><br>
-            More text coming soon.
+             <strong>A little bit more about how I got here:</strong> <br>
+             Born and raised in the Bay Area, I was fortunate enough to be surrounded by a diverse group of people, culture, food, geography, and industries. 
+             I absolutely loved exploring San Francisco via Muni, Bart, and even long runs with my track team. 
+             While in college at UC Davis, I worked in various research labs studying specific proteins and fats that were in breast milk, with the hopes to use this research to ensure infant formulas would provide the closest ingredients possible.
+             This passion led me to work at UCSF following graduation, where I led a research study called the <a class="links" href="https://descrt.ucsf.edu/" target="_blank">Development Epidemiological Study of Infants born through Reproductive Technology</a>.
+             Here, I was able to develop a study website and saw the need for better technology in the healthcare system. After much deliberation, I decided to cancel my MCAT test and completely pivot to a field that 
+             seemed to fit my interests and lifestyle much better: tech.  
+             <br><br>Luckily enough, I found a job at <a class ="links" href="https://www.getstreamline.com/" target="_blank">Streamline</a> that changed my entire life. As the 3rd person on the team for this software, I was exposed to business operations, growth, marketing, 
+             sales, customer success, and development. Over the past few years, Streamline has grown quickly and my skills have succeeded in leading the sales, but I always enjoyed playing with the code and talking
+             to our developers the most. This year, I turned 27 and decided to take a leap with the UC Davis Full Stack Development Program. I can't wait to learn about the development world and hope to 
+             bring these skills back to Streamline, and, eventually, the healthcare system.
+             <br><br>Outside of work and school, you can find me at the gym, hiking with my puppy, Kaya, experimenting with gluten-free recipes, or watching the Real Housewives. 
           </p>
 
-          <p>Keep up with me on social:</p>
-          <!--Links to social-->
-            <a href="https://www.linkedin.com/in/maria-lara-sf" target="_blank" class="fa fa-linkedin fa-fw"></a>
-            <a href="https://www.instagram.com/__maria.lara__/" target="_blank" class="fa fa-instagram fa-fw"></a>
-            <a href="https://github.com/maria-lara" target="_blank" class="fa fa-github fa-fw"></a>
-        </article>
+          <p>Keep up with my journey here:</p>
 
-      </section>
+            <!--Links to social-->
+              <a href="https://www.linkedin.com/in/maria-lara-sf" target="_blank" class="fa fa-linkedin fa-fw"></a>
+              <a href="https://www.instagram.com/__maria.lara__/" target="_blank" class="fa fa-instagram fa-fw"></a>
+              <a href="https://github.com/maria-lara" target="_blank" class="fa fa-github fa-fw"></a>
+          </article>
+  
+        </section>
     </main>
 
     <!--Footer-->
