--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
     <main>
         <section class="container-xs bg-white">
           <div class="row mt-1">
-            <header style="padding-bottom: 5px;">Portfolio</header>
+            <header>Portfolio</header>
           </div>
 
       <!--Second row with description-->    
@@ -81,7 +81,7 @@
                 </div>
         
             <!--Second row inside project features: First Website-->
-                <div class="row mx-15">
+                <div class="row mx-15" style="padding-bottom: 50px;">
                    <!--First column in First Website row with image-->
                     <div class="col">
                      <a href="https://codepen.io/marialara/pen/wvKLvyp" target="_blank"><img src="./assets/firstproject2.png" class="img-thumbnail"  alt="Screenshot of first projects"></a>
