updated projects page

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,67 @@
       <!--Third row with project features-->
           <div class ="row-mt-1">
 
+            <!--Seventh row inside project features: Cryptelligent-->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in Cryptelligent row with image-->
+               <div class="col">
+                <a href="https://eroux13.github.io/Cryptelligent/" target="_blank"><img src="./assets/cryptelligent.png" class="img-thumbnail"  alt="Screenshot of welcome page"></a>
+               </div>
+               <!--Second column in Cryptelligent row with text-->
+               <div class="col">
+                   <h2>Cryptelligent</h2>
+                   <p>This project was done with 3 other developers with the goal to allow new investors to learn about cryptocurrency. </p>
+                   <ul>
+                       <li><a href="https://eroux13.github.io/Cryptelligent/" target="_blank" class="links">Start learning now!</a></li>
+                   </ul>
+               </div>
+           </div>  
+            <!--Sixth row inside project features: Weather Dashboard-->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in Weather Dashboard row with image-->
+               <div class="col">
+                <a href="https://maria-lara.github.io/weather-dash/" target="_blank"><img src="./assets/weatherdash.png" class="img-thumbnail"  alt="Screenshot of weather dashboard"></a>
+               </div>
+               <!--Second column in Weather Dashboard row with text-->
+               <div class="col">
+                   <h2>Weather Dashboard</h2>
+                   <p>Check the current weather, 5-day forecast, and even UV index of any city you search using this weather dashboard.</p>
+                   <ul>
+                       <li><a href="https://maria-lara.github.io/weather-dash/" target="_blank" class="links">Check here!</a></li>
+                   </ul>
+               </div>
+           </div>             
+            <!--Fifth row inside project features: Work Planner-->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in Work Planner row with image-->
+               <div class="col">
+                <a href="https://maria-lara.github.io/work-planner/" target="_blank"><img src="./assets/dailyplanner.png" class="img-thumbnail"  alt="Screenshot of work planner"></a>
+               </div>
+               <!--Second column in Work Planner row with text-->
+               <div class="col">
+                   <h2>Work Planner</h2>
+                   <p>Keep up with your daily tasks using this work planner. The planner will even change colors to give you a visual indicator of times available for you.</p>
+                   <ul>
+                       <li><a href="https://maria-lara.github.io/work-planner/" target="_blank" class="links">Start planning now!</a></li>
+                   </ul>
+               </div>
+           </div> 
+            <!--Fourth row inside project features: Code Quiz-->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in Code Quiz row with image-->
+               <div class="col">
+                <a href="https://maria-lara.github.io/code-quiz/" target="_blank"><img src="./assets/quiz.png" class="img-thumbnail"  alt="Screenshot of code quiz"></a>
+               </div>
+               <!--Second column in Code Quiz row with text-->
+               <div class="col">
+                   <h2>Code Quiz</h2>
+                   <p>Test your housewives knowledge with this quiz! All quiz questions highlight the craziest events that have happened in housewife history. At the end, the quiz will display the user's inputted initals and their score for the day.</p>
+                   <ul>
+                       <li><a href="https://maria-lara.github.io/code-quiz/" target="_blank" class="links">Test your knowledge here!</a></li>
+                   </ul>
+               </div>
+           </div> 
+
             <!--Third row inside project features: Password Generator-->
             <div class="row mx-15" style="padding-bottom: 50px;">
               <!--First column in Password Generator row with image-->
@@ -73,7 +134,7 @@
                <!--Second column in Password Generator row with text-->
                <div class="col">
                    <h2>Password Generator</h2>
-                   <p>This website page was the first project I had ever completed when experimenting with coding. It was a fun first time playing with HTML and CSS, and allowed me to create a not-so pretty, but entertaining webpage. This was done on <a href="https://codepen.io" target="_blank" class ="links">CodePen</a></p>
+                   <p>The goal of this generator is to have employees select their conditions for the password (password lenght, types of characters, etc.) and have a random password created based upon the set criteria. Therefore, the password should be much safer and not liable to having accounts being hacked.</p>
                    <ul>
                        <li><a href="https://maria-lara.github.io/password-generator/p" target="_blank" class="links">Check out the generator</a></li>
                    </ul>
