updated incorrect link

--- a/portfolio.html
+++ b/portfolio.html
@@ -136,7 +136,7 @@
                    <h2>Password Generator</h2>
                    <p>The goal of this generator is to have employees select their conditions for the password (password lenght, types of characters, etc.) and have a random password created based upon the set criteria. Therefore, the password should be much safer and not liable to having accounts being hacked.</p>
                    <ul>
-                       <li><a href="https://maria-lara.github.io/password-generator/p" target="_blank" class="links">Check out the generator</a></li>
+                       <li><a href="https://maria-lara.github.io/password-generator/" target="_blank" class="links">Check out the generator</a></li>
                    </ul>
                </div>
            </div>     
