added latest projects to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,115 @@
       <!--Third row with project features-->
           <div class ="row-mt-1">
 
+            <!--Fourteenth row inside project features: Gym Database -->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in row with image-->
+               <div class="col">
+                <a href="https://github.com/eroux13/gym_management_database" target="_blank"><img src="./assets/gymproject.png" class="img-thumbnail"  alt="Screenshot of homepage"></a>
+               </div>
+               <!--Second column in row with text-->
+               <div class="col">
+                   <h2>Gym Database</h2>
+                   <p>This application allows gym owners to provide a login area for members to update their information, classes, and membership.</p>
+                   <ul>
+                       <li><a href="https://intense-springs-12278.herokuapp.com/" target="_blank" class="links">Sign up today></a></li>
+                   </ul>
+               </div>
+           </div>  
+            <!--Thirteenth row inside project features: Tech Blog -->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in row with image-->
+               <div class="col">
+                <a href="https://github.com/maria-lara/tech-blog" target="_blank"><img src="./assets/techblog.png" class="img-thumbnail"  alt="Screenshot of blog"></a>
+               </div>
+               <!--Second column in row with text-->
+               <div class="col">
+                   <h2>Tech Blog</h2>
+                   <p>This application allows new and old users to post, edit, and delete blog posts online.</p>
+                   <ul>
+                       <li><a href="https://maria-lara-tech-blog.herokuapp.com/" target="_blank" class="links">Add your post></a></li>
+                   </ul>
+               </div>
+           </div>  
+
+            <!--Twelfth row inside project features: E-Commerce -->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in row with image-->
+               <div class="col">
+                <a href="https://github.com/maria-lara/e-commerce" target="_blank"><img src="./assets/ecommerce.png" class="img-thumbnail"  alt="Screenshot of sample insomnia"></a>
+               </div>
+               <!--Second column in row with text-->
+               <div class="col">
+                   <h2>E-Commerce</h2>
+                   <p>The purpose of this project was to build an database and back end for an e-commerce site.</p>
+                   <ul>
+                       <li><a href="https://www.youtube.com/watch?v=3wUiN5WE1gY" target="_blank" class="links">See video demonstration></a></li>
+                   </ul>
+               </div>
+           </div>  
+
+            <!--Eleventh row inside project features: Note Taker -->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in row with image-->
+               <div class="col">
+                <a href="https://github.com/maria-lara/employee-tracker" target="_blank"><img src="./assets/employeetracker.png" class="img-thumbnail"  alt="Screenshot of sample inputs"></a>
+               </div>
+               <!--Second column in row with text-->
+               <div class="col">
+                   <h2>Employee Tracker</h2>
+                   <p>Users can view all employees, departments, and roles in the database, as well as update employee information, add departments, and new roles.</p>
+                   <ul>
+                       <li><a href="https://github.com/maria-lara/employee-tracker" target="_blank" class="links">Learn how to use it></a></li>
+                   </ul>
+               </div>
+           </div>  
+
+            <!--Tenth row inside project features: Note Taker -->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in row with image-->
+               <div class="col">
+                <a href="https://github.com/maria-lara/note-taker" target="_blank"><img src="./assets/notetaker.png" class="img-thumbnail"  alt="Screenshot of welcome screen"></a>
+               </div>
+               <!--Second column in row with text-->
+               <div class="col">
+                   <h2>Note Taker</h2>
+                   <p>With this application, users can add notes, save those notes, and go back and delete them later in a clean and easy to use interface.</p>
+                   <ul>
+                       <li><a href="https://maria-lara-note-taker.herokuapp.com/" target="_blank" class="links">Start using it here></a></li>
+                   </ul>
+               </div>
+           </div>  
+
+            <!--Ninth row inside project features: Team Profile -->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in row with image-->
+               <div class="col">
+                <a href="https://github.com/maria-lara/readme-gen" target="_blank"><img src="./assets/teamprofile.png" class="img-thumbnail"  alt="Screenshot of sample html"></a>
+               </div>
+               <!--Second column in row with text-->
+               <div class="col">
+                   <h2>Team Profile Generator</h2>
+                   <p>The purpose of this project was to build a team profile generator (names, titles, departments, & salaries) command line application. </p>
+                   <ul>
+                       <li><a href="https://github.com/maria-lara/readme-gen" target="_blank" class="links">Start using it here></a></li>
+                   </ul>
+               </div>
+           </div>  
+            <!--Eigth row inside project features: README Generator -->
+            <div class="row mx-15" style="padding-bottom: 50px;">
+              <!--First column in row with image-->
+               <div class="col">
+                <a href="https://github.com/maria-lara/readme-gen" target="_blank"><img src="./assets/readmegen.png" class="img-thumbnail"  alt="Screenshot of generator"></a>
+               </div>
+               <!--Second column in row with text-->
+               <div class="col">
+                   <h2>README Generator</h2>
+                   <p>This project was designed to have users input their information to selected prompts in order to generate a README file automatically.</p>
+                   <ul>
+                       <li><a href="https://www.youtube.com/watch?v=L_EYkhLcmDE" target="_blank" class="links">See it live></a></li>
+                   </ul>
+               </div>
+           </div>  
             <!--Seventh row inside project features: Cryptelligent-->
             <div class="row mx-15" style="padding-bottom: 50px;">
               <!--First column in Cryptelligent row with image-->
