added resume link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
              <br><br>Outside of work and school, you can find me at the gym, hiking with my puppy, Kaya, experimenting with gluten-free recipes, or watching the Real Housewives. 
           </p>
 
-          <p>Keep up with my journey here:</p>
+          <p>Check out my <a href="https://drive.google.com/file/d/1LPpXpq6PRsvDOSP2nCPEXwivVqQ3bb7J/view?usp=sharing" target="_blank">resume</a> and keep up with my journey here:</p>
 
             <!--Links to social-->
               <a href="https://www.linkedin.com/in/maria-lara-sf" target="_blank" class="fa fa-linkedin fa-fw"></a>
